[gd_scene load_steps=5 format=4 uid="uid://dxegu7b4p8b2t"]

[ext_resource type="Script" uid="uid://do76yu5brhwm5" path="res://scripts/battle.gd" id="1_6t8i5"]
[ext_resource type="Texture2D" uid="uid://cb2j7ui2jwrbk" path="res://assets/tileset.png" id="1_ip7xm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oxp8w"]
texture = ExtResource("1_ip7xm")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7sfm4"]
sources/0 = SubResource("TileSetAtlasSource_oxp8w")

[node name="Battle" type="Node2D"]
script = ExtResource("1_6t8i5")
units = {
"archers": 3,
"knights": 1,
"shields": 1
}

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAPAAAAAAABAAAAAAAQAAAAAAACAAAAAAAQAAAAAAADAAAAAAAQAAAAAAAEAAAAAAAQAAAAAAAFAAAAAAAQAAAAAAAGAAAAAAAQAAAAAAAHAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAJAAAAAAAQAAAAAAAKAAAAAAAQAAAAAAAKAAQAAAACAAAAAAAAAAQAAAACAAAAAAABAAQAAAACAAAAAAACAAQAAAACAAAAAAADAAQAAAAEAAAAAAAEAAQAAAABAAAAAAAFAAQAAAABAAAAAAAGAAQAAAACAAAAAAAHAAQAAAACAAAAAAAIAAQAAAACAAAAAAAAAAMAAAAOAAAAAAAAAAIAAAAXAAAAAAAAAAEAAAAXAAAAAAAJAAQAAAACAAAAAAAKAAMAAAATAAAAAAAKAAIAAAAMAAAAAAAKAAEAAAAMAAAAAAABAAEAAAAMAAAAAAABAAIAAAAMAAAAAAABAAMAAAATAAAAAAACAAMAAAATAAAAAAACAAIAAAAMAAAAAAACAAEAAAAMAAAAAAADAAEAAAAMAAAAAAAEAAEAAAAMAAAAAAAFAAEAAAAMAAAAAAAGAAEAAAAMAAAAAAAHAAEAAAAMAAAAAAAIAAEAAAAMAAAAAAAJAAEAAAAMAAAAAAAJAAIAAAAMAAAAAAAJAAMAAAATAAAAAAAIAAMAAAATAAAAAAAIAAIAAAAMAAAAAAAHAAIAAAAMAAAAAAAGAAIAAAAMAAAAAAAHAAMAAAATAAAAAAAGAAMAAAATAAAAAAAFAAMAAAATAAAAAAAEAAMAAAATAAAAAAAEAAIAAAAMAAAAAAADAAMAAAATAAAAAAADAAIAAAAMAAAAAAAFAAIAAAAMAAAAAAALAAMAAAATAAAAAAAMAAMAAAATAAAAAAANAAMAAAATAAAAAAAOAAMAAAATAAAAAAAPAAMAAAATAAAAAAAQAAMAAAATAAAAAAARAAMAAAATAAAAAAASAAMAAAATAAAAAAATAAMAAAASAAAAAAALAAIAAAAMAAAAAAALAAEAAAAMAAAAAAAMAAEAAAAMAAAAAAANAAEAAAAMAAAAAAAOAAEAAAAMAAAAAAAPAAEAAAAMAAAAAAAQAAEAAAAMAAAAAAARAAEAAAAMAAAAAAASAAEAAAAMAAAAAAATAAEAAAAWAAAAAAATAAIAAAAWAAAAAAASAAIAAAAMAAAAAAARAAIAAAAMAAAAAAAQAAIAAAAMAAAAAAAPAAIAAAAMAAAAAAAOAAIAAAAMAAAAAAANAAIAAAAMAAAAAAAMAAIAAAAMAAAAAAALAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAANAAAAAAAQAAAAAAAOAAAAAAAQAAAAAAAPAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAARAAAAAAAQAAAAAAASAAAAAAAQAAAAAAATAAAAAAARAAAAAAATAAQAAAABAAAAAAASAAQAAAACAAAAAAARAAQAAAACAAAAAAAQAAQAAAACAAAAAAAPAAQAAAACAAAAAAAOAAQAAAABAAAAAAANAAQAAAABAAAAAAAMAAQAAAACAAAAAAALAAQAAAACAAAAAAAAAAoAAAAUAAAAAAABAAoAAAABAAAAAAACAAoAAAABAAAAAAADAAoAAAABAAAAAAAEAAoAAAABAAAAAAAFAAoAAAABAAAAAAAGAAoAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAABAAAAAAAJAAoAAAABAAAAAAAKAAoAAAABAAAAAAALAAoAAAABAAAAAAAMAAoAAAABAAAAAAANAAoAAAABAAAAAAAOAAoAAAABAAAAAAAPAAoAAAABAAAAAAAQAAoAAAABAAAAAAARAAoAAAABAAAAAAASAAoAAAAVAAAAAAATAAoAAAACAAAAAAAAAAUAAAAVAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAABAAUAAAADAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAAACAAAAAAACAAUAAAAEAAAAAAACAAYAAAACAAAAAAACAAcAAAABAAAAAAACAAgAAAABAAAAAAACAAkAAAABAAAAAAADAAUAAAABAAAAAAADAAYAAAADAAAAAAADAAcAAAABAAAAAAADAAgAAAABAAAAAAADAAkAAAABAAAAAAAEAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAcAAAADAAAAAAAEAAgAAAABAAAAAAAEAAkAAAABAAAAAAAFAAUAAAABAAAAAAAFAAYAAAABAAAAAAAFAAcAAAABAAAAAAAFAAgAAAABAAAAAAAFAAkAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAAAAAAGAAcAAAABAAAAAAAGAAgAAAABAAAAAAAGAAkAAAABAAAAAAAHAAUAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAHAAgAAAABAAAAAAAHAAkAAAABAAAAAAAIAAUAAAABAAAAAAAIAAYAAAAUAAAAAAAIAAcAAAABAAAAAAAIAAgAAAABAAAAAAAIAAkAAAAEAAAAAAAJAAUAAAACAAAAAAAJAAYAAAAVAAAAAAAJAAcAAAABAAAAAAAJAAgAAAADAAAAAAAJAAkAAAADAAAAAAAKAAUAAAACAAAAAAAKAAYAAAABAAAAAAAKAAcAAAABAAAAAAAKAAgAAAACAAAAAAAKAAkAAAABAAAAAAALAAUAAAABAAAAAAALAAYAAAABAAAAAAALAAcAAAACAAAAAAALAAgAAAACAAAAAAALAAkAAAABAAAAAAAMAAUAAAABAAAAAAAMAAYAAAABAAAAAAAMAAcAAAACAAAAAAAMAAgAAAABAAAAAAAMAAkAAAABAAAAAAANAAUAAAABAAAAAAANAAYAAAABAAAAAAANAAcAAAABAAAAAAANAAgAAAABAAAAAAANAAkAAAABAAAAAAAOAAUAAAABAAAAAAAOAAYAAAABAAAAAAAOAAcAAAABAAAAAAAOAAgAAAABAAAAAAAOAAkAAAABAAAAAAAPAAUAAAABAAAAAAAPAAYAAAABAAAAAAAPAAcAAAABAAAAAAAPAAgAAAABAAAAAAAPAAkAAAABAAAAAAAQAAUAAAABAAAAAAAQAAYAAAABAAAAAAAQAAcAAAABAAAAAAAQAAgAAAABAAAAAAAQAAkAAAABAAAAAAARAAUAAAAVAAAAAAARAAYAAAAUAAAAAAARAAcAAAAEAAAAAAARAAgAAAABAAAAAAARAAkAAAABAAAAAAASAAUAAAACAAAAAAASAAYAAAABAAAAAAASAAcAAAACAAAAAAASAAgAAAADAAAAAAASAAkAAAABAAAAAAATAAUAAAACAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAATAAgAAAABAAAAAAATAAkAAAADAAAAAAAAAAsAAAABAAAAAAABAAsAAAAEAAAAAAACAAsAAAAVAAAAAAAIAAsAAAADAAAAAAAPAAsAAAADAAAAAAASAAsAAAADAAAAAAAHAAsAAAACAAAAAAAGAAsAAAACAAAAAAAOAAsAAAACAAAAAAANAAsAAAAEAAAAAAADAAsAAAABAAAAAAAEAAsAAAABAAAAAAAFAAsAAAABAAAAAAAJAAsAAAABAAAAAAAKAAsAAAABAAAAAAALAAsAAAABAAAAAAAMAAsAAAAUAAAAAAAQAAsAAAABAAAAAAARAAsAAAAVAAAAAAATAAsAAAACAAAAAAA=")
tile_set = SubResource("TileSet_7sfm4")

[node name="ArcherSpawns" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ArcherSpawn" type="Marker2D" parent="ArcherSpawns"]
position = Vector2(10, 100)

[node name="ArcherSpawn2" type="Marker2D" parent="ArcherSpawns"]
position = Vector2(10, 132)

[node name="ArcherSpawn3" type="Marker2D" parent="ArcherSpawns"]
position = Vector2(10, 165)

[node name="KnightSpawns" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="KnightSpawn" type="Marker2D" parent="KnightSpawns"]
position = Vector2(55, 93)

[node name="KnightSpawn2" type="Marker2D" parent="KnightSpawns"]
position = Vector2(55, 125)

[node name="KnightSpawn3" type="Marker2D" parent="KnightSpawns"]
position = Vector2(55, 158)

[node name="ShieldSpawns" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ShieldSpawn" type="Marker2D" parent="ShieldSpawns"]
position = Vector2(101, 100)

[node name="ShieldSpawn2" type="Marker2D" parent="ShieldSpawns"]
position = Vector2(101, 132)

[node name="ShieldSpawn3" type="Marker2D" parent="ShieldSpawns"]
position = Vector2(101, 165)
